added update method for firebase data and first test case
