# backend/server/common/api.yml
@@ -106,3 +106,26 @@ paths:
       responses:
         200:
           description: Return the API specification
+
+  /todo/update/{id}:
+    put:
+      tags:
+        - To Do
+      description: This is for update users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The id of the ToDo to be updated
+          type: string
+        - name: body
+          in: body
+          description: To Do object that needs to be added to database
+          required: true
+          schema:
+            $ref: "#/definitions/ExampleBody"
+      responses:
+        200:
+          description: Succesfully update
+        404:
+          description: Key not found
